<resources>
    <string name="app_name">TranSpeech</string>
    <string name="appName">TranSpeech</string>
    <string name="aMainTvInterlocutor">Caller\'s language</string>
    <string name="aMainBtnLaunchTranslation">Launch translation</string>
    <string name="aMainBtnHelp">Help</string>
    <string name="aMainBtnParameters">Parameters</string>
    <string-array name="spLanguage">
        <item>Chinese</item>
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="aEndCallEnded">Call ended</string>
    <string name="aEndTvSave">What do you want to save ?</string>
    <string name="aEndSwSaveTranscription">Transcription</string>
    <string name="aEndSwSaveCall">Call</string>
    <string name="aEndSwSaveTranslation">Translation</string>
    <string name="aEndBtnCancel">Cancel</string>
    <string name="aEndBtnValidate">Validate</string>
    <string name="aParaTvTitle">Parameters</string>
    <string name="aParaTvSavePath">Save path</string>
    <string name="aParaTvTranslationLanguage">Language of translation</string>
    <string name="sharedPreferencesPath">Path</string>
    <string name="sharedPreferencesTranslationLanguage">TranslationLanguage</string>
    <string name="sharedPreferencesInterlocutorLanguage">InterlocutorLanguage</string>
    <string name="sharedPreferencesSaveCall">SaveCall</string>
    <string name="sharedPreferencesSaveTranscription">SaveTranscription</string>
    <string name="sharedPreferencesSaveTranslation">SaveTranslation</string>
    <string name="aParaTvSaveNewPath">Choose new save path</string>
    <string name="aParaTvSaveNewPathSaved">New path saved</string>
    <string name="aDispTvTime">00:00:00</string>
    <string name="aDispBtnParameters">Load Example File</string>
    <string name="tTxtVLinsting">Listening in progress</string>
    <string name="aDispBtnListen">Listen</string>
    <string name="aDispBtnClose">Close</string>
    <string name="aHelpFaq">
        <b>F.A.Q. - Foire Aux Questions</b>\n
        \n
        \n
        1) A quoi sert cette application TranSpeech \? \n
        <i>Notre application sert à traduire un appel sous format texte sur son téléphone.</i>\n
        \n
        2) Pourquoi choisir la langue de l\'interlocuteur ? \n
        <i>Pour une meilleure traduction, choisissez la langue de l\'interlocuteur dans la page d\'accueil.</i>\n
        \n
        3) Comment choisir la langue de traduction ?\n
        <i>Dans les paramètres de l\'application, sélectionnez la langue de traduction</i>\n
        \n
        4) A quoi correspond le chemin dans les paramètres ?\n
        <i>Ce chemin correspond au dossier où le fichier texte de la traduction de l\' appel sera enregistré.</i>\n
        \n
        5) Quelle version d\'android TranSpeech utilise t elle ? \n
        <i>Android 6.</i>\n

        \n
        \n
        Application TranSpeech crée par \n
         - Loic Bine \n
         - Quentin Dell \n
         - Antoine Horvat \n
         - Sarah Mesbah \n
         - William Muller \n
         - Jean Still \n
        Elle a été réalisée dans le cadre du projet Alcatel de deuxième année du CNAM Grand Est. \n
        \n
        \n
        <i>#+1 Si vous avez lu jusqu\'ici !</i>\n
        \n
        \n
        <b>Conservatoire National des Arts et Métiers\n
        2A Promotion 2016-2019</b>\n
    </string>
    <string name="aHelpBtnCancel">Come back</string>
    <string name="aTransTvTitle">Example Translation</string>
    <string name="aTransTvSourceText">Text to translate</string>
    <string name="aTransTvResponseText">Response</string>
    <string name="aTransBtnLaunch">Launch translation</string>
    <string name="permission_message">This app needs to record audio and recognize your speech.</string>
</resources>
