<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.fougas.decoder.MainActivity">


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">
        <Spinner
            android:id="@+id/aMainSpLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <Button
        android:id="@+id/aMainBtnLaunchTranslation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@layout/button_round"
        android:text="@string/aMainBtnLaunchTranslation"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/aMainBtnHelp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/aMainBtnHelp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/aMainBtnParameters"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/aMainBtnParameters"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>