<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fougas.decoder.EndCallActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aEndCallEnded"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/aEndIvCall"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:background="@drawable/call"
            android:contentDescription="@string/aEndCallEnded" />

        <TextView
            android:id="@+id/aEndTvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aEndIvCall"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/aEndTvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aEndTvSave"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/aEndRlSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aEndTvSave">

            <LinearLayout
                android:id="@+id/aEndLlSaveCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/aEndSwSaveCall"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <Switch
                        android:id="@+id/aEndSwSaveCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aEndLlSaveTranscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aEndLlSaveCall">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/aEndSwSaveTranscription"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <Switch
                        android:id="@+id/aEndSwSaveTranscription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aEndLlSaveTranslation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aEndLlSaveTranscription">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/aEndSwSaveTranslation"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <Switch
                        android:id="@+id/aEndSwSaveTranslation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/aEndBtnValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aEndRlSwitch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/aEndBtnValidate"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </RelativeLayout>
</LinearLayout>
